Added Sound and stuff
Added sound to power up pickup
Added sound to shooting
Added white sprite for antibody, crosshairs, and blood cells for better use of unity's color

--- a/CSS385FInalProject/Assembly-CSharp.csproj
+++ b/CSS385FInalProject/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Controller Scripts\CellManager.cs" />
     <Compile Include="Assets\Controller Scripts\MainController.cs" />
     <Compile Include="Assets\Controller Scripts\ObjectPool.cs" />
+    <Compile Include="Assets\Controller Scripts\SoundManagerScript.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/bucco/OneDrive/Desktop/CSS385FInalProject/CSS385Finalproject/CSS385FInalProject/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
